--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   progress_indicators: ^1.0.0
   image_picker: ^0.8.6
   audio_waveforms: ^1.0.1
+  stream_transform: ^2.1.0
 
 dev_dependencies:
   flutter_test:
