--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   audio_waveforms: ^1.0.1
   # For formatting time locale in message receipts
   timeago: ^3.4.0
+  scrollable_positioned_list_extended: ^0.3.8
 
 dev_dependencies:
   flutter_test:
