--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
        </intent>
    </queries>
    <uses-permission android:name="android.permission.INTERNET"/>
-   <application
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    <application
         android:label="example"
         android:icon="@mipmap/ic_launcher">
         <activity
