--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,17 @@ dependencies:
   swipeable_tile: ^2.0.0+3
   scroll_to_index: ^3.0.1
   vibration: ^1.7.6
+  sqflite: ^2.2.6
+  path: ^1.8.2
+  get_it: ^7.2.0
+  json_annotation: ^4.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: 'flutter'
   flutter_lints: ^2.0.1
+  json_serializable: ^6.6.1
+  build_runner: ^2.3.3
 
 flutter:
 
