--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
        </intent>
    </queries>
    <uses-permission android:name="android.permission.INTERNET"/>
+   <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
    <application
         android:label="example"
         android:icon="@mipmap/ic_launcher">
