--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ platforms:
   windows:
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -31,11 +31,16 @@ dependencies:
   audio_waveforms: ^1.0.1
   # For formatting time locale in message receipts
   timeago: ^3.4.0
+  equatable: ^2.0.5
+  json_annotation: ^4.8.0
+  meta: ^1.8.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
+  json_serializable: ^6.6.1
+  build_runner: ^2.3.3
 
 flutter:
 
