fix: 🍕 typing userid feat: ❇️ markdown support

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   audio_waveforms: ^1.0.1
   # For formatting time locale in message receipts
   timeago: ^3.4.0
+  flutter_parsed_text: ^2.2.1
 
 dev_dependencies:
   flutter_test:
