--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@ doc/api/
 .flutter-plugins
 /.flutter-plugins-dependencies
 chat_ui.iml
+
+# for those developers who use fvm not to upload the whole sdk
+.fvm/
