--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   intl: ^0.18.0
   flutter_linkify: ^6.0.0
   url_launcher: ^6.1.7
-  emoji_picker_flutter: ^1.6.0
+  emoji_picker_flutter: ^2.0.0
   http: ^1.1.0
   html: ^0.15.1
   any_link_preview: ^3.0.0
@@ -32,6 +32,7 @@ dependencies:
   # For formatting time locale in message receipts
   timeago: ^3.4.0
   voice_message_package: ^2.1.4
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
