fix: 🐛 add missing customization #133
- change the default avatar 'if the url was not provided'
- error builder for asset and network profile image
- config of emoji picker sheet
- background color of emoji picker modal sheet
- on tap of reacted user list in reaction list modal
- top padding of text field

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   progress_indicators: ^1.0.0
   image_picker: '>=0.8.9 <2.0.0'
   audio_waveforms: ^1.0.1
+  cached_network_image: ^3.3.1
   # For formatting time locale in message receipts
   timeago: ^3.4.0
 
