--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   audio_waveforms: ^1.0.5
   # For formatting time locale in message receipts
   timeago: ^3.6.1
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
