chore: :hammer: add support label for desktop and web in pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,10 @@ repository: https://github.com/SimformSolutionsPvtLtd/flutter_chatview
 platforms:
   android:
   ios:
+  web:
+  macos:
+  windows:
+  linux:
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
