--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.20.0
+  intl: any
   url_launcher: ^6.3.0
   emoji_picker_flutter: ^3.0.0
   any_link_preview: ^3.0.2
