--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: chatview
 description: A Flutter package that allows you to integrate Chat View with highly customization options.
 version: 2.4.0
-issue_tracker: https://github.com/SimformSolutionsPvtLtd/flutter_chatview/issues
-repository: https://github.com/SimformSolutionsPvtLtd/flutter_chatview
+issue_tracker: https://github.com/SimformSolutionsPvtLtd/chatview/issues
+repository: https://github.com/SimformSolutionsPvtLtd/chatview
 
 platforms:
   android:
@@ -13,24 +13,21 @@ platforms:
   linux:
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
+  any_link_preview: ^3.0.2
+  audio_waveforms: ^1.2.0
+  cached_network_image: ^3.4.1
+  chatview_utils: ^0.0.1
+  emoji_picker_flutter: ^4.3.0
   flutter:
     sdk: flutter
+  image_picker: '>=0.8.9 <2.0.0'
   intl: ^0.20.0
   url_launcher: ^6.3.0
-  emoji_picker_flutter: ^3.0.0
-  any_link_preview: ^3.0.2
-  image_picker: '>=0.8.9 <2.0.0'
-  audio_waveforms: ^1.2.0
-  # For formatting time locale in message receipts
-  cached_network_image: ^3.4.1
 
 dev_dependencies:
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
-
-flutter:
-
